// 平台共同体 · 根构建文件
// Java 25 (LTS) + Spring Boot 4.1.0 + Gradle (Groovy DSL)
// 开发规范：阿里巴巴 Java 开发手册（黄山版），按 JDK 25 / Spring Boot 4.1 新特性做了现代化调整

group = "com.platformcommons"
version = "0.1.0-SNAPSHOT"

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    if (path.startsWith(":backend:")) {
        apply plugin: "java"

        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(25)
            }
        }

        // 阿里规范：统一编码 UTF-8
        tasks.withType(JavaCompile).configureEach {
            options.encoding = "UTF-8"
            options.compilerArgs.addAll(["-parameters"])
        }

        // 全局依赖管理
        dependencies {
            implementation(platform("org.springframework.boot:spring-boot-dependencies:4.1.0"))

            // Lombok 全局可用（阿里规范允许，消除模板代码）
            compileOnly("org.projectlombok:lombok:1.18.46")
            annotationProcessor("org.projectlombok:lombok:1.18.46")

            testImplementation("org.springframework.boot:spring-boot-starter-test")
            // Gradle 8.14 内置的 junit-platform-launcher 版本与 JUnit Platform 6.x 不兼容，
            // 需显式对齐到 BOM 管理的版本
            testRuntimeOnly("org.junit.platform:junit-platform-launcher")
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
            // 虚拟线程 pinning（线程钉住）检测——当虚拟线程在 synchronized 块内被阻塞时，
            // JVM 会将其钉在载体平台线程上，导致虚拟线程退化为平台线程。
            // 开启此选项后，pinning 事件会以 WARNING 级别输出到 jdk.VirtualThreadPinned 日志。
            jvmArgs += [
                "-Djdk.tracePinnedThreads=short",
                "-Djdk.virtualThreadScheduler.parallelism=8"
            ]
        }
    }
}
